# xjz-website

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  GITHUB_SETUP.md  README.md  SERVICE_MANAGEMENT.md  fix_selinux.sh  install_service.sh  push_to_github.sh
data/: github_xjz6626.json  github_xjz6626.json.backup
public/css/: style.css
src/: api.rs  main.rs
src/github/: client.rs  config.rs  manager.rs  mod.rs  models.rs  storage.rs
src/tools/: background_changer.rs  config.rs  fake_identity.rs  image_resizer.rs  ip_fetcher.rs  mod.rs
templates/: about.html  base.html  blog.html  blog_dynamic.html  blog_old.html  contact.html  index.html  projects.html  projects_dynamic.html  resume.html  tools.html
